# ELEC70015_Human-Centered-Robotics-2026_Imperial

./: .gitignore  README.md  build_and_hint.sh  demo.sh  demo_microphone.sh  doc.md  requirements.txt  run_full_pipeline.sh  run_full_pipeline_unitree.sh  setup_rplidar_a2.sh  setup_unitree_lidar.sh  yolov8m.onnx
Log/: OrbbecSDK.log.txt
calibration/: aruco_zero_calibration.py  generate_aruco_markers.py
catkin_ws/: .gitignore
catkin_ws/src/p3at_base/: CMakeLists.txt  package.xml
catkin_ws/src/p3at_base/launch/: base.launch
catkin_ws/src/p3at_base/scripts/: odom_republisher.py
catkin_ws/src/p3at_lms_description/: CMakeLists.txt  package.xml
catkin_ws/src/p3at_lms_description/launch/: display.launch  display_unitree.launch
catkin_ws/src/p3at_lms_description/rviz/: display_unitree.rviz
catkin_ws/src/p3at_lms_description/urdf/: p3at_lms.urdf.xacro  p3at_unitree.urdf.xacro  unitree_lidar_l1.urdf.xacro
catkin_ws/src/p3at_lms_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/p3at_lms_gazebo/launch/: sim.launch  sim_unitree.launch
catkin_ws/src/p3at_lms_gazebo/worlds/: complex_maze.world  p3at_lms.world
catkin_ws/src/p3at_lms_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/p3at_lms_navigation/launch/: auto_amcl_verify.launch  auto_amcl_verify_unitree.launch  auto_mapping.launch  auto_mapping_unitree.launch  mapping.launch  mapping_unitree.launch  nav.launch  nav_unitree.launch  passive_mapping_unitree.launch  real_robot_lidar_bringup.launch  real_robot_mapping.launch  real_robot_mapping_rplidar.launch  real_robot_mapping_unitree.launch  real_robot_nav.launch  real_robot_nav_rplidar.launch  real_robot_nav_unitree.launch
catkin_ws/src/p3at_lms_navigation/maps/: amcl_report.json  amcl_report.txt  complex_maze_map.pgm  complex_maze_map.yaml  demo_map.yaml  exp4_task67_tuned_run2.yaml  session_20260224_223938.pgm  session_20260224_223938.yaml  task_session_20260317_185935.pgm  task_session_20260317_185935.yaml  task_session_20260317_191039.pgm  task_session_20260317_191039.yaml  task_session_20260318_181602.pgm  task_session_20260318_181602.yaml  task_session_20260318_184758.yaml  task_session_20260318_185512.pgm  task_session_20260318_185512.yaml  task_session_20260318_194310.yaml  task_session_20260318_223019.pgm  task_session_20260318_223019.yaml  task_session_20260318_225817.pgm  task_session_20260318_225817.yaml  task_session_20260318_233250.pgm  task_session_20260318_233250.yaml  task_session_20260319_210323.pgm  task_session_20260319_210323.yaml  task_session_20260319_214246.pgm  task_session_20260319_214246.yaml  task_session_20260319_214710.pgm  task_session_20260319_214710.yaml  task_session_20260319_223414.pgm  task_session_20260319_223414.yaml  task_session_20260319_224155.pgm  task_session_20260319_224155.yaml  task_session_20260319_225226.pgm  task_session_20260319_225226.yaml  task_session_20260319_225809.pgm  task_session_20260319_225809.yaml  task_session_20260319_232407.pgm  task_session_20260319_232407.yaml  (+18 more)
catkin_ws/src/p3at_lms_navigation/param/: amcl.yaml  costmap_common.yaml  global_costmap.yaml  gmapping.yaml  local_costmap.yaml  move_base.yaml
catkin_ws/src/p3at_lms_navigation/param/rplidar/: amcl.yaml  costmap_common.yaml  global_costmap.yaml  global_costmap_local_only.yaml  global_costmap_slam.yaml  gmapping.yaml  local_costmap.yaml  move_base.yaml
catkin_ws/src/p3at_lms_navigation/param/unitree/: amcl.yaml  costmap_common.yaml  global_costmap.yaml  global_costmap_local_only.yaml  global_costmap_slam.yaml  gmapping.yaml  local_costmap.yaml  move_base.yaml
catkin_ws/src/p3at_lms_navigation/rviz/: nav.rviz  nav_unitree.rviz
catkin_ws/src/p3at_lms_navigation/scripts/: amcl_verifier.py  autonomous_explorer.py  continuous_map_manager.py  nav_experiment_runner.py  target_follow_metrics.py  test_unitree_lidar.sh  waypoint_test.py
catkin_ws/src/target_follower/: CMakeLists.txt  package.xml
catkin_ws/src/target_follower/launch/: target_follow.launch  target_follow_real.launch
catkin_ws/src/target_follower/scripts/: frontier_planner.py  gazebo_target_publisher.py  goal_to_target_relay.py  mock_target_point_publisher.py  move_target.py  navigation_success_udp_bridge.py  point_to_target_pose.py  rplidar_health_monitor.py  scan_body_filter.py  target_follower.py  test_standoff_face.py  udp_target_bridge.py  udp_trash_action_bridge.py
common_utils/: __init__.py  rgbd_orientation.py
dialogue/: README.md  demo.sh  demo_microphone.sh  dialogue_udp_runner.py  requirements.txt
eval/: nlu_eval.py
handobj_detection/: .gitignore  README.md  handobj_detection_rgbd.py  handobj_detection_rgbd_remote_15cls.py
nlu_data/: test.txt  train.txt
p3at_lms_p3at_movebase_gmapping_noetic_v5/: README.md
ros_ws/: .gitignore
scripts/: demo_dashboard.sh  demo_dashboard_docker.sh  deploy.env  deploy.env.example  dialogue_stability_check.sh  env.sh  install_pi_time_sync_service.sh  restart_demo_modules.sh  run_sim_four_experiments.sh  start_base.sh  start_demo copy.sh  start_demo.sh  start_master.sh  (+21 more)
(+111 files in other folders)
