<?xml version="1.0"?>
<package format="2">
  <name>p3at_lms_navigation</name>
  <version>0.1.0</version>
  <description>Navigation stack configs: gmapping mapping, AMCL localization, move_base planning and avoidance.</description>
  <maintainer email="you@example.com">Your Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>move_base</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_server</depend>
  <depend>amcl</depend>
  <depend>gmapping</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>p3at_lms_gazebo</depend>
  <depend>target_follower</depend>
  <depend>rviz</depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <export/>
</package>
