<?xml version="1.0"?>
<package format="2">
  <name>target_follower</name>
  <version>0.1.0</version>
  <description>Target following nodes: publish target pose in sim and feed move_base goals.</description>
  <maintainer email="you@example.com">Your Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>gazebo_msgs</depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <export/>
</package>
